--- a/index.html
+++ b/index.html
@@ -15,45 +15,126 @@
   </style>
 </head>
 <body>
-  About
-  Careers
-  Events
-  Products
-  Support
+  <nav class="main-nav">
+    <div class="main-nav__logo">
+      <img src="images/logo.svg" alt="loopstudios logo">
+    </div>
 
-  Immersive experiences that deliver
+    <ul class="main-nav__menu">
+      <li class="main-nav__menu-item">About</li>
+      <li class="main-nav__menu-item">Careers</li>
+      <li class="main-nav__menu-item">Events</li>
+      <li class="main-nav__menu-item">Products</li>
+      <li class="main-nav__menu-item">Support</li>
+    </ul>
+  </nav>
 
-  The leader in interactive VR
+  <section class="hero">
+    <p class="hero__text">Immersive experiences that deliver</p>
+  </section>
 
-  Founded in 2011, Loopstudios has been producing world-class virtual reality 
-  projects for some of the best companies around the globe. Our award-winning 
-  creations have transformed businesses through digital experiences that bind 
-  to their brand.
 
-  Our creations
+  <section class="about">
+    <div class="about__img"></div>
+    <div class="about__text">
+      <h1 class="about__text__main-heading">The leader in interactive VR</h1>
+      <p class="about__text__description">  Founded in 2011, Loopstudios has been producing world-class virtual reality 
+        projects for some of the best companies around the globe. Our award-winning 
+        creations have transformed businesses through digital experiences that bind 
+        to their brand.</p>
+    </div>
+  </section>
 
-  See all
+  <section class="porfolio">
+    <h1 class="portfolio__main-heading">Our creations</h1>
+    <button class="portfolio__btn">See all</button>
+    <div class="portfolio__gallery">
 
-  Deep earth
-  Night arcade
-  Soccer team VR
-  The grid
-  From up above VR
-  Pocket borealis
-  The curiosity
-  Make it fisheye
+      <div class="portfolio__gallery__item">
+        <picture class="porfolio__gallery__item__image">
+          <source media="(min-width: 800px)" srcset="images/desktop/image-deep-earth.jpg">
+          <img src="images/desktop/image-deep-earth.jpg" alt="Deep earth">
+        </picture>
+        <p class="portfolio__gallery__item__legend">Deep earth</p>
+      </div>
 
-  About
-  Careers
-  Events
-  Products
-  Support
+      <div class="portfolio__gallery__item">
+        <picture class="porfolio__gallery__item__image">
+          <source media="(min-width: 800px)" srcset="images/desktop/image-night-arcade.jpg">
+          <img src="images/desktop/image-night-arcade.jpg" alt="Night Arcade">
+        </picture>
+        <p class="portfolio__gallery__item__legend">Night Arcade</p>
+      </div>
 
-  © 2021 Loopstudios. All rights reserved.
+      <div class="portfolio__gallery__item">
+        <picture class="porfolio__gallery__item__image">
+          <source media="(min-width: 800px)" srcset="images/desktop/image-soccer-team.jpg">
+          <img src="images/desktop/image-soccer-team.jpg" alt="Soccer team VR">
+        </picture>
+        <p class="portfolio__gallery__item__legend">Soccer team VR</p>
+      </div>
 
-  <div class="attribution">
+      <div class="portfolio__gallery__item">
+        <picture class="porfolio__gallery__item__image">
+          <source media="(min-width: 800px)" srcset="images/desktop/image-grid.jpg">
+          <img src="images/desktop/image-grid.jpg" alt="The grid">
+        </picture>
+        <p class="portfolio__gallery__item__legend">The grid</p>
+      </div>
+
+      <div class="portfolio__gallery__item">
+        <picture class="porfolio__gallery__item__image">
+          <source media="(min-width: 800px)" srcset="images/desktop/image-from-above.jpg">
+          <img src="images/desktop/image-from-above.jpg" alt="From up above VR">
+        </picture>
+        <p class="portfolio__gallery__item__legend">From up above VR</p>
+      </div>
+
+      <div class="portfolio__gallery__item">
+        <picture class="porfolio__gallery__item__image">
+          <source media="(min-width: 800px)" srcset="images/desktop/image-pocket-borealis.jpg">
+          <img src="images/desktop/image-pocket-borealis.jpg" alt="Pocket borealis">
+        </picture>
+        <p class="portfolio__gallery__item__legend">Pocket borealis</p>
+      </div>
+
+      <div class="portfolio__gallery__item">
+        <picture class="porfolio__gallery__item__image">
+          <source media="(min-width: 800px)" srcset="images/desktop/image-curiosity.jpg">
+          <img src="images/desktop/image-curiosity.jpg" alt="The curiosity">
+        </picture>
+        <p class="portfolio__gallery__item__legend">The curiosity</p>
+      </div>
+
+      <div class="portfolio__gallery__item">
+        <picture class="porfolio__gallery__item__image">
+          <source media="(min-width: 800px)" srcset="images/desktop/image-fisheye.jpg">
+          <img src="images/desktop/image-fisheye.jpg" alt="Make it fisheye">
+        </picture>
+        <p class="portfolio__gallery__item__legend">Make it fisheye</p>
+      </div>
+
+    </div>
+  </section>
+
+
+  <footer>
+    <div></div>
+    <div class="footer-nav">
+      <ul class="footer-nav__menu">
+        <li class="footer-nav__menu-item">About</li>
+        <li class="footer-nav__menu-item">Careers</li>
+        <li class="footer-nav__menu-item">Events</li>
+        <li class="footer-nav__menu-item">Products</li>
+        <li class="footer-nav__menu-item">Support</li>
+      </ul>
+      
+      <p class="footer-nav__copyright"> © 2021 Loopstudios. All rights reserved.</p>
+    </div>
+  </footer>
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div> -->
 </body>
 </html>
